<resources>
    <string name="app_name">AlarmClock</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="sunday">日</string>
    <string name="about">アプリについて…</string>
    <string name="message_delete">%sを削除します</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="alarm_regist_failure_1">アラーム登録失敗</string>
    <string name="alarm_regist_failure_2">アラームの登録に失敗しました</string>
    <string-array name="pattern">
        <item>普通</item>
        <item>だんだん大きく</item>
    </string-array>
    <string-array name="release">
        <item>タップ</item>
        <item>足し算</item>
    </string-array>
    <string-array name="interval">
        <item>1分</item>
        <item>3分</item>
        <item>5分</item>
        <item>10分</item>
        <item>15分</item>
        <item>20分</item>
        <item>25分</item>
        <item>30分</item>
        <item>35分</item>
        <item>40分</item>
        <item>45分</item>
        <item>50分</item>
        <item>55分</item>
        <item>60分</item>
    </string-array>
    <string-array name="times">
        <item>1回</item>
        <item>2回</item>
        <item>3回</item>
        <item>4回</item>
        <item>5回</item>
    </string-array>
    <string-array name="mannerMode">
        <item>バイブレーション</item>
        <item>音を出す</item>
    </string-array>
</resources>
