<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/enabled_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_alarm_toggle"
        android:textOff=""
        android:textOn=""
        android:textSize="0dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/enabled_button"
        android:layout_toRightOf="@+id/enabled_button"
        android:orientation="vertical">

        <TextView
            android:id="@+id/alarm_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/alarm_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/monday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/tuesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/wednesday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <TextView
                android:id="@+id/thursday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/friday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/saturday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <TextView
                android:id="@+id/sunday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_create_black_24dp" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_delete_black_24dp" />

        <ImageButton
            android:id="@+id/preview_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_play_circle_filled_black_24dp" />
    </LinearLayout>
</RelativeLayout>